--- a/index.html
+++ b/index.html
@@ -36,66 +36,90 @@
       font-weight: bold;
       font-size: 1.1rem;
       margin-bottom: 0.5rem;
-      color: #00d4ff;
+      color: #00ddff;
     }
     .tool-description {
       font-size: 0.9rem;
-      color: #ddd;
+      margin-bottom: 1rem;
     }
     .tool-button {
-      margin-top: 1rem;
-      padding: 0.6rem 1.2rem;
-      background: #00d4ff;
-      color: #000;
+      background: #00ccff;
       border: none;
+      color: #000;
+      padding: 0.6rem 1.2rem;
+      font-size: 0.9rem;
       border-radius: 4px;
       cursor: pointer;
-      font-weight: bold;
       width: 100%;
     }
     .tool-button:hover {
       background: #00aacc;
+    }
+    a {
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <h1>ARWEEN–BUILD™ Tool System</h1>
   <div class="grid">
+
     <div class="tool-card">
       <div class="tool-title">Document Analysis (TOR + BOQ)</div>
-      <div class="tool-description">ตรวจสอบ TOR, เงื่อนไข และ BOQ อัตโนมัติ</div>
-      <button class="tool-button">Start Analysis</button>
+      <div class="tool-description">ตรวจสอบ TOR, เงื่อนไข และ BOQ ดัชนีมิติ</div>
+      <a href="https://example.com/tor-analysis" target="_blank">
+        <button class="tool-button">Start Analysis</button>
+      </a>
     </div>
+
     <div class="tool-card">
       <div class="tool-title">Building Structure Analysis</div>
       <div class="tool-description">วิเคราะห์ความสูง ระบบรับน้ำหนัก Slab/Beam</div>
-      <button class="tool-button">Analyze Structure</button>
+      <a href="https://example.com/structure-analysis" target="_blank">
+        <button class="tool-button">Analyze Structure</button>
+      </a>
     </div>
+
     <div class="tool-card">
       <div class="tool-title">Material Replication Analysis</div>
       <div class="tool-description">ประเมินวัสดุใช้ซ้ำ อันตราย และฝังกลบ</div>
-      <button class="tool-button">Assess Materials</button>
+      <a href="https://example.com/material-analysis" target="_blank">
+        <button class="tool-button">Assess Materials</button>
+      </a>
     </div>
+
     <div class="tool-card">
       <div class="tool-title">Logistics Planning</div>
-      <div class="tool-description">คำนวณเที่ยวรถ จุดรอ เวลาขนส่งวัสดุ</div>
-      <button class="tool-button">Plan Logistics</button>
+      <div class="tool-description">คำนวนเที่ยวรถ จุดรอ เวลาขนส่งวัสดุ</div>
+      <a href="https://example.com/logistics-planning" target="_blank">
+        <button class="tool-button">Plan Logistics</button>
+      </a>
     </div>
+
     <div class="tool-card">
       <div class="tool-title">Impact Analysis</div>
       <div class="tool-description">ประเมินฝุ่น PM เสียง จราจรใกล้พื้นที่</div>
-      <button class="tool-button">Assess Impact</button>
+      <a href="https://example.com/impact-analysis" target="_blank">
+        <button class="tool-button">Assess Impact</button>
+      </a>
     </div>
+
     <div class="tool-card">
       <div class="tool-title">Monitoring and Evaluation</div>
       <div class="tool-description">แผน Drone Scan และ IoT Monitoring</div>
-      <button class="tool-button">Monitor System</button>
+      <a href="https://example.com/monitoring-system" target="_blank">
+        <button class="tool-button">Monitor System</button>
+      </a>
     </div>
+
     <div class="tool-card">
       <div class="tool-title">Document Export Tool</div>
       <div class="tool-description">รวม Workplan รายงานวัสดุ TOR สรุป</div>
-      <button class="tool-button">Export Documents</button>
+      <a href="https://example.com/document-export" target="_blank">
+        <button class="tool-button">Export Documents</button>
+      </a>
     </div>
+
   </div>
 </body>
 </html>
